--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <ul class="nav" role="navigation">
-        <li class="name"><a href="#">Accessible Frog</a></li>
+        <li class="name"><a class="selected" href="#">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
         <li><a href="survey.html">Survey</a></li>
       </ul>
