--- a/survey.html
+++ b/survey.html
@@ -12,9 +12,9 @@
   <body>
     <nav>
       <ul class="nav" role="navigation">
-        <li class="name"><a href="#">Accessible Frog</a></li>
+        <li class="name"><a href="index.html">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
-        <li><a href="survey.html">Survey</a></li>
+        <li><a class="selected" href="#">Survey</a></li>
       </ul>
     </nav>
 
