--- a/tour.html
+++ b/tour.html
@@ -12,8 +12,8 @@
   <body>
     <nav>
       <ul class="nav" role="navigation">
-        <li class="name"><a href="#">Accessible Frog</a></li>
-        <li><a href="tour.html">Tour</a></li>
+        <li class="name"><a href="index.html">Accessible Frog</a></li>
+        <li><a class="selected" href="#">Tour</a></li>
         <li><a href="survey.html">Survey</a></li>
       </ul>
     </nav>
