--- a/survey.html
+++ b/survey.html
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <nav>
-      <ul class="nav" role="navigation">
+    <nav role="navigation">
+      <ul class="nav">
         <li class="name"><a href="index.html">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
         <li><a class="selected" href="#">Survey</a></li>
