--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <nav>
-      <ul class="nav" role="navigation">
+    <nav role="navigation">
+      <ul class="nav">
         <li class="name"><a class="selected" href="#">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
         <li><a href="survey.html">Survey</a></li>
